re-tag CI jobs according to mana/appimg-builder!6 (glados is no more)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
 legacy:
   stage: sync
   tags:
-    - glados
+  - trusted
   script:
   - apt-get -qq update
   - apt-get install -qq -y make zip zlib1g-dev zlibc python ssh rsync python3 git
@@ -33,7 +33,7 @@ legacy:
 evolved:
   stage: deploy
   tags:
-    - glados
+  - trusted
   script:
   - apt-get -qq update
   - apt-get install -qq -y make zip zlib1g-dev zlibc python ssh rsync python3 git
@@ -55,6 +55,8 @@ evolved:
 
 pages:
   stage: deploy
+  tags:
+  - trusted
   variables:
     GIT_STRATEGY: clone
     GIT_SUBMODULE_STRATEGY: recursive
@@ -62,8 +64,6 @@ pages:
     UPDATE_DIR: "../../../public"
     UPDATE_HTTP: "none"
     CC: "clang"
-  tags:
-    - glados
   script:
   - apt-get -qq update
   - apt-get install -qq -y make clang zip zlib1g-dev zlibc python ssh rsync python3
@@ -93,7 +93,7 @@ pages:
 clientdata:
   stage: deploy
   tags:
-    - glados
+  - trusted
   script:
   - apt-get -qq update
   - apt-get install -qq -y make zip zlib1g-dev zlibc python ssh rsync python3 git
