--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -16608,6 +16608,7 @@ item_db: (
 		} else { //@EVOL2
 			doevent "Shovel::OnDig"; //@EVOL2
 		} //@EVOL2
+		//set @ShovelName$, "IronShovel"; // @TMWA
 		//callfunc "useShovel"; // @TMWA
 	">
 },
