make legendary shovel and map dropable so ppl can drop duplicates

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -17101,7 +17101,7 @@ item_db: (
 	KeepAfterUse: true
 	Trade: {
 		notrade: true
-		nodrop: true
+		nodrop: false
 		nocart: true
 		nomail: true
 		noauction: true
@@ -17132,7 +17132,7 @@ item_db: (
 	KeepAfterUse: true
 	Trade: {
 		notrade: true
-		nodrop: true
+		nodrop: false
 		nocart: true
 		nomail: true
 		noauction: true
