make legendary shovel and map dropable so ppl can drop duplicates

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -17131,7 +17131,7 @@ item_db: (
 	KeepAfterUse: true
 	Trade: {
 		notrade: true
-		nodrop: true
+		nodrop: false
 		nocart: true
 		nomail: true
 		noauction: true
@@ -17162,7 +17162,7 @@ item_db: (
 	KeepAfterUse: true
 	Trade: {
 		notrade: true
-		nodrop: true
+		nodrop: false
 		nocart: true
 		nomail: true
 		noauction: true
