Treasure Hunt quest.
Some highlights:
* Finally some USABLE maps and shovels. Special thanks to HoraK.
* No NPC dialogs, no chats, no "bring me 5 ratto tail", it made as new
    "world interaction" instead.
* Open ended. Its up to players how exactly to do it. There're different ways.
* E.g. maps are optional. But at least someone have to find location. Then they
    may - or may not share data with others, if they're up for more contenders.
    No any artificial limits on that. And even w/o shovel player can get some
    booty.
* Neither just battle nor just quest nor just event, its a bit of both.
* Digging now quite a perilous business, being some crossbreed of several
    game mechanics known to me.
* Somewhat "pirate themed" and even got something similar to cutscene.
* Quite deadly and designed as team level effort from scratch. Full treasure
    digging cycle not suposed to be doable solo at all. Is very unlikely anyone
    would ever manage this.
* Uses quite unusual game mechanics. E.g. mobs are equally affected by certain
    events. Of course it aggravates them.
* Designed to be repeatable quest in the end, e.g. weekly (with reduced rewards ofc)
* Quite configurable/tuneable in run time, without server restarts. Could be disabled
    or retuned if necessary.
* Hopefully just fun!

--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -37,6 +37,7 @@ npc: npc/functions/ghost.txt
 npc: npc/functions/vault.txt
 npc: npc/functions/global_event_handler.txt
 npc: npc/functions/teleport_manager.txt
+npc: npc/functions/treasure_hunt.txt
 npc: npc/functions/spawns_on_mobkill.txt
 
 // Item Functions
