Remove undead parts from swamp mobs, add arrows to enchanters, remove keys from both
Why can players stay in swamp indefinetely by bringing supplies without having to grind elsewhere to pay for the crypt battle?

- Remove undead parts: doom golems and enchanters are not undead. Having undead parts was simply a convenience for permanent swamp residents. This ends.
- Remove keys from DG & E: There is already the reaper which drops a lot of keys and is frequently parked away as fighting it reduces overall xp gain. This change should encourage fighting the reaper.
- Add arrows to Enchanters: they are animated as having a bow and giving arrows helps swamp archers stand on a more equal footing, materials-wise. In the future arrow sacks could be added, but those do not exist yet.
- Also nerf the Amulet, Magic Ring and mask drops: they should be as rare as possible, as these mobs are already fought for other reasons (xp).

Approved-by: Hello TMW <hello@themanaworld.org>

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -3928,13 +3928,8 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 10
 	Drops: {
-		TreasureKey: 800
-		UndeadEar: 150
-		UndeadEye: 150
-		RottenRags: 70
-		Soul: 50
 		BlackRose: 30
-		MagicRing: 4
+		MagicRing: 2
 		BlinkingHocus: 1
 	}
 },
@@ -3981,13 +3976,11 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 10
 	Drops: {
-		TreasureKey: 800
-		UndeadEar: 90
-		UndeadEye: 80
-		RottenRags: 70
-		Soul: 50
+		Arrow: 5000
+		IronArrow: 5000
+		SilverArrow: 50
 		BlackRose: 30
-		EnchantersAmulet: 2
+		EnchantersAmulet: 1
 	}
 },
 {
