Add PointyWitchHat rare drop (0.01%) to Luvia,Tormenta,Zax,Xak
(all that have equipment/head/wizard-hat.xml in monsters.xml)


By popular request. Is there any other mob that should have it? Or some of these that shouldn't?

Zax and Xak could also get the scroll drops of the other two.

Approved-by: Hello TMW <hello@themanaworld.org>
**** legacy/serverdata!871

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -2541,6 +2541,7 @@ mob_db: (
 		GambogeScroll: 10
 		MauveScroll: 10
 		JoyplimScroll: 10
+		PointyWitchHat: 1
 	}
 },
 {
@@ -3447,6 +3448,7 @@ mob_db: (
 		GambogeScroll: 10
 		MauveScroll: 10
 		JoyplimScroll: 10
+		PointyWitchHat: 1
 	}
 },
 {
@@ -3664,6 +3666,9 @@ mob_db: (
 	AttackDelay: 672
 	AttackMotion: 672
 	DamageMotion: 50
+	Drops: {
+		PointyWitchHat: 1
+	}
 },
 {
 	Id: 1143
@@ -4552,6 +4557,9 @@ mob_db: (
 	AttackDelay: 672
 	AttackMotion: 672
 	DamageMotion: 50
+	Drops: {
+		PointyWitchHat: 1
+	}
 },
 {
 	Id: 1004
