Add chests NPCs to open storage in banks.
This adds chest NPC in all banks to improve usability.

Now its possible to open player storage by just 1 mouse
click or 2 key presses (N -> T by default) instead of
clicking through some NPC dialogs.

Idea by Thorbjorn.

--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -39,6 +39,7 @@ npc: npc/functions/global_event_handler.txt
 npc: npc/functions/teleport_manager.txt
 npc: npc/functions/treasure_hunt.txt
 npc: npc/functions/spawns_on_mobkill.txt
+npc: npc/functions/storage_chests.txt
 
 // Item Functions
 npc: npc/items/purification_potion.txt
