Change URL of submodules to correct ones
This MR lands changes to git submodule URLs - pass on client data.

Approved-by: Thorbjørn Lindeijer <bjorn@lindeijer.nl>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "client-data"]
 	path = client-data
-	url = https://git.themanaworld.org/legacy/clientdata.git
+	url = https://git.themanaworld.org/tmw/clientdata.git
 [submodule "tools"]
 	path = tools
-	url = https://git.themanaworld.org/legacy/tools.git
+	url = https://git.themanaworld.org/tmw/tools.git
