Add digged holes NPCs by HoraK to Treasure Hunt quest.
Rationale:
* Players were doing digged tiles tracking anyway, so lets make it fun and good looking.
* Its a small step to less static, more mutable world impacted by player actions.
* I'd say these holes look really nice in sand.

Highlights:
* Some infrastructure to add permanent or tempoary hole by single function call.
* Does sanity checking.
* Holes can be randomized.
* NPC (script) to use as template for holes provided.
* Temporary holes self-destruct, this needs no attention beyond specifying timeout.
* Commands to add hole (for dev/testing) and to delete all holes on map.

Known issues:
* This is initial feature bring-up implementing mentioned function and NPC. Next commit adds actual digg holes to Treasure Hunt.
* Terrain type not detected yet, sand holes type used everywhere to get show going.
* NPCs do not persist across server restart (i.e. no NPC state serialize/deserialize yet)
* Too chatty/debug/dev-ish yet. Test command to add hole and debug messages are to be removed later.

--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -40,6 +40,7 @@ npc: npc/functions/teleport_manager.txt
 npc: npc/functions/treasure_hunt.txt
 npc: npc/functions/spawns_on_mobkill.txt
 npc: npc/functions/storage_chests.txt
+npc: npc/functions/digged_holes.txt
 
 // Item Functions
 npc: npc/items/purification_potion.txt
