This brings pandora box style reward chests.
They effectively replaces "Exp chests" of labyrinth making code smaller,
and chests reusable by GMs for events and more versatile in general.

Some highlights:
* About 10x smaller code to place Labyrinth chests, gets rid of 60K file.
* Chests selfdestruct on reward -> no need to save state, allows to ditch permanent array[100] of strings.
* Reusable core code to make placing chests as just 1 function call.
* GMs can now place new reward chests, e.g. for events.
* Simple anticheat sets calling GM not eligible for rewards (also prevents chest trigger by mistake).
* Antigreed idea of original chests retained and reuses same vars.
* GMs can also remove all chests on map if desired.
* Labyrinth chests placed in truly random manner on every server restart.
* Chests now more versatile: reward could be one of:
  1) Random XP instead of fixed 200 000, centered on 120K, 10K min + rand(5000) JEXP (original had 10K).
  2) Random GP - centered on 90K average, 10K min.
  3) Random BP - centered on 40 BP average, 10 min.

--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -41,6 +41,7 @@ npc: npc/functions/treasure_hunt.txt
 npc: npc/functions/spawns_on_mobkill.txt
 npc: npc/functions/storage_chests.txt
 npc: npc/functions/digged_holes.txt
+npc: npc/functions/pandora_box_chests.txt
 
 // Item Functions
 npc: npc/items/purification_potion.txt
