mobs_and_drops_20250728
- added the Rainshroom
- added Freddy (this mob is invincible he is supposed to be a lil easter egg)
- added Sun-/Snow-/Moon-/Rainspores they are supposed to get a use soon (replaced old not jet used Moondust and Sundust)
- added the RainshroomHat (dropped by Rainshroom)
- adjusted BlackSteel armors to same price as normal Steel armors
- added WonderWood (has a use to craft a not jet existing item)
- renamed Ent Abomination to Wonder Woodling (initial plan been Ent, but it clashes with Tolkien copyright, thanks to Rill for spotting this)
- change "rain interactions" to use that renamed WonderWoodling const (reported by Hello=))
- adjusted Duck stats
- adjusted RubberDucky drop rates on Duck and Elite Duck
- removed RubberDucky drops from Friday Cat and Pumpkin for now
- added WonderWoodling/Rainshrooms/Sunshrooms/Snowshrooms/WickedMushrooms/Moonshrooms/LavaSlimes/Ducks to maps
- removed MoonshroomHat and SunshroomHat from chronos since they are available now an can be farmed (why? because chronos was only supposed to be a place where all those not yet available items should go if they can be farmed or get by a quest they must be removed there (illia is the only exeption since some players dont want to make several chars until they got all items and rather farm bp to get all))

Co-authored-by: Hello=) <hello@themanaworld.org>
Approved-by: Hello TMW <hello@themanaworld.org>
Approved-by: Thorbjørn Lindeijer <bjorn@lindeijer.nl>
Reviewed-by: Hello TMW <hello@themanaworld.org>

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -2228,8 +2228,8 @@ item_db: (
 	AegisName: "BlackWarlordBoots"
 	Name: "BlackWarlordBoots"
 	Type: "IT_ARMOR"
-	Buy: 19000
-	Sell: 2000
+	Buy: 141500
+	Sell: 70750
 	Weight: 550
 	Matk: -22
 	Def: 5
@@ -5966,8 +5966,8 @@ item_db: (
 },
 {
 	Id: 5390
-	AegisName: "MoonDust"
-	Name: "MoonDust"
+	AegisName: "MoonshroomSpores"
+	Name: "MoonshroomSpores"
 	Type: "IT_ETC"
 	Buy: 2000
 	Sell: 1000
@@ -5978,8 +5978,8 @@ item_db: (
 },
 {
 	Id: 5391
-	AegisName: "SunDust"
-	Name: "SunDust"
+	AegisName: "SunshroomSpores"
+	Name: "SunshroomSpores"
 	Type: "IT_ETC"
 	Buy: 2000
 	Sell: 1000
@@ -5987,6 +5987,41 @@ item_db: (
 	Refine: false
 	ViewSprite: 5391
 	//Disabled: true // @TMWA
+},
+{
+	Id: 5408
+	AegisName: "SnowshroomSpores"
+	Name: "SnowshroomSpores"
+	Type: "IT_ETC"
+	Buy: 2000
+	Sell: 1000
+	Weight: 1
+	Refine: false
+	ViewSprite: 5408
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5409
+	AegisName: "RainshroomSpores"
+	Name: "RainshroomSpores"
+	Type: "IT_ETC"
+	Buy: 2000
+	Sell: 1000
+	Weight: 1
+	Refine: false
+	ViewSprite: 5409
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5410
+	AegisName: "WonderWood"
+	Name: "WonderWood"
+	Type: "IT_ETC"
+	Buy: 20000
+	Sell: 10000
+	Weight: 10
+	Refine: false
+	ViewSprite: 5410
 },
 /* Chest Armor */
 {
@@ -10549,8 +10584,8 @@ item_db: (
 	AegisName: "BlackChainmailShirt"
 	Name: "BlackChainmailShirt"
 	Type: "IT_ARMOR"
-	Buy: 15000
-	Sell: 1500
+	Buy: 83750
+	Sell: 41875
 	Weight: 800
 	Matk: -120
 	Def: 20
@@ -10567,8 +10602,8 @@ item_db: (
 	AegisName: "BlackLightPlatemail"
 	Name: "BlackLightPlatemail"
 	Type: "IT_ARMOR"
-	Buy: 50000
-	Sell: 2500
+	Buy: 192500
+	Sell: 96250
 	Weight: 1200
 	Matk: -150
 	Def: 25
@@ -10585,8 +10620,8 @@ item_db: (
 	AegisName: "BlackWarlordPlate"
 	Name: "BlackWarlordPlate"
 	Type: "IT_ARMOR"
-	Buy: 200000
-	Sell: 6000
+	Buy: 351250
+	Sell: 175625
 	Weight: 2600
 	Matk: -170
 	Def: 27
@@ -14528,8 +14563,8 @@ item_db: (
 	AegisName: "BlackWarlordHelmet"
 	Name: "BlackWarlordHelmet"
 	Type: "IT_ARMOR"
-	Buy: 30000
-	Sell: 3000
+	Buy: 85750
+	Sell: 42875
 	Weight: 900
 	Matk: -36
 	Def: 18
@@ -14778,6 +14813,24 @@ item_db: (
 		bonus bHPrecovRate, 7;
 		bonus bMdef, 7;
 		bonus bHit, -7;
+	">
+},
+{
+	Id: 5407
+	AegisName: "RainshroomHat"
+	Name: "RainshroomHat"
+	Type: "IT_ARMOR"
+	Buy: 3000
+	Sell: 1500
+	Weight: 30
+	Matk: 5
+	Def: 15
+	Slots: 0
+	Loc: "EQP_HEAD_TOP"
+	Refine: false
+	ViewSprite: 5407
+	Script: <"
+		bonus bMatkRate, 5; // @EVOL2
 	">
 },
 /* Usable items */
@@ -18551,8 +18604,8 @@ item_db: (
 	AegisName: "BlackSteelShield"
 	Name: "BlackSteelShield"
 	Type: "IT_ARMOR"
-	Buy: 40000
-	Sell: 3000
+	Buy: 100000
+	Sell: 50000
 	Weight: 2500
 	Matk: -200
 	Def: 20
