--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -6676,7 +6676,6 @@ mob_db: (
 	DamageMotion: 480
 	Drops: {
 		JackOLantern: 100
-		RubberDucky: 20
 		RealisticBrain: 10
 		JarofBlood: 15
 		PumpkinSeeds: 500
@@ -7523,7 +7522,6 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 20
 	Drops: {
-		RubberDucky: 10
 		RealisticBrain: 5
 		JarofBlood: 9
 		PumpkinSeeds: 250
@@ -8243,13 +8241,13 @@ mob_db: (
 	Id: 1048
 	SpriteName: "Duck"
 	Name: "Duck"
-	Lv: 14
-	Hp: 1282
+	Lv: 24
+	Hp: 642
 	Sp: 0
-	Exp: 16
-	JExp: 1
+	Exp: 36
+	JExp: 6
 	AttackRange: 1
-	Attack: [60, 63]
+	Attack: [10, 36]
 	Def: 17
 	Mdef: 20
 	WalkMask: "WALK_WATER"
@@ -8267,7 +8265,6 @@ mob_db: (
 	Element: (1, 1)
 	Mode: {
 		CanMove: true
-		Looter: true
 		CanAttack: true
 		CastSensorChase: true
 		ChangeChase: true
@@ -8283,7 +8280,7 @@ mob_db: (
 		DuckFeather: 550
 		BirdLeg: 500
 		AnimalBones: 250
-		RubberDucky: 100
+		RubberDucky: 1
 	}
 },
 {
@@ -8506,8 +8503,8 @@ mob_db: (
 },
 {
 	Id: 1185
-	SpriteName: "EntAbomination"
-	Name: "Ent Abomination"
+	SpriteName: "WonderWoodling"
+	Name: "WonderWoodling"
 	Lv: 130
 	Hp: 45000
 	Sp: 280
@@ -8548,10 +8545,11 @@ mob_db: (
 	Drops: {
 		RawLog: 2000
 		RawLog: 2000
-		ReedBundle: 250
 		ReedBundle: 500
-		Root: 500
+		ReedBundle: 1000
 		Root: 1000
+		Root: 2000
+		WonderWood: 10
 	}
 },
 {
@@ -8640,7 +8638,7 @@ mob_db: (
 		BirdLeg: 1000
 		BirdLeg: 500
 		AnimalBones: 500
-		RubberDucky: 200
+		RubberDucky: 10
 	}
 },
 {
@@ -10928,5 +10926,96 @@ mob_db: (
 		Snowflake: 100
 		BlueHeadSlime: (1, "ODG_BASICSTAT")
 	}
+},
+{
+	Id: 1237
+	SpriteName: "Rainshroom"
+	Name: "Rainshroom"
+	Lv: 120
+	Hp: 650
+	Sp: 0
+	Exp: 324
+	JExp: 55
+	AttackRange: 4
+	Attack: [90, 110]
+	Def: 12
+	Mdef: 12
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 22
+		Vit: 20
+		Int: 15
+		Dex: 40
+		Luk: 20
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	Mode: {
+		CanMove: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 700
+	AttackDelay: 1500
+	AttackMotion: 572
+	DamageMotion: 380
+	MutationCount: 2
+	MutationStrength: 50
+	Drops: {
+		SmallMushroom: 500
+		InsectLeg: 500
+		SulphurPowder: 400
+		Lifestone: 300
+		EmptyBottle: 100
+		Fungus: 30
+		MushroomSpores: 100
+		JoyplimScroll: 50
+		RainshroomHat: (1, "ODG_BASICSTAT")
+	}
+},
+{
+	Id: 1238
+	SpriteName: "Freddy"
+	Name: "Freddy"
+	Lv: 200
+	Hp: 60000
+	Sp: 0
+	Exp: 0
+	JExp: 0
+	AttackRange: 1
+	Attack: [200, 300]
+	Def: 100
+	Mdef: 100
+	Stats: {
+		Str: 120
+		Agi: 145
+		Vit: 135
+		Int: 1
+		Dex: 125
+		Luk: 200
+	}
+	ViewRange: 5
+	ChaseRange: 10
+	Size: 0
+	Race: 2
+	Element: (5, 1)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+	}
+	MoveSpeed: 100
+	AttackDelay: 176
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 0
+	MutationStrength: 0
 },
 )
