Corrected 'update_host' to the current URL

--- a/login/conf/login_local.conf.example
+++ b/login/conf/login_local.conf.example
@@ -25,7 +25,7 @@ ladminallowip: 127.0.0.1
 // Update host
 // If not empty, send address for client to download data.
 // This must contain news.txt and resources.xml
-update_host: http://tmwdata.org/updates/
+update_host: https://updates.themanaworld.org/
 
 // Which world should appear first to the players.
 // see server_name in world/conf/char_local.conf
