Smarter Enchanter Amulet that haves mind of its own.
1) Lore wise:
Legends say some items got mind of their own, preferring to serve someone similar to creators or former owners.
Fully describing such item properties could be difficult at best.

2) What enchanter amulet likes and how it works?
* Player should wear one of: Rainerang, ShortBow, ForestBow, DesertBow, ImperialBow, BansheeBow, Bow
* Player should be above Lv 60 to get ranger's special bonus.

3) In this implementation:
* Non-ranger (or players < Lv 60) now get: +18 bHit and +0 bCritical.
* Rangers "similar enough" to enchanters >= Lv 60 get +22 bHit and +5 bCritical

Rationale behind this change:
* Amulets were mostly meant to be archer thing - but also found use by warriors.
* MR !874 proposed just to nerf it. I got idea I can try to do it more fun than that. Here it goes!
* Warriors are already dominating class in game, but !874 also penalizes (underpowered!) archers.
* This approach solves mentioned problem by differentiating bonus depending on gear equipped.
* Small crit bonus and overall it +1 tool to tweak archers <-> warriors balance despite both using phys stats.
* Perhaps less boring item with custom logic and "preferences".
* Can be viewed as technology test for "compound items" on TMWA as well.
* One small step to give archery its former glory. More to follow.

So TLDR its attempt to both have cookie and eat it. Item no longer haves fixed stats.
It got "logic" instead. It makes it one of "balancing tools" now.

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1641,7 +1641,9 @@ item_db: (
 	Refine: false
 	ViewSprite: 1227
 	Script: <"
-		bonus bHit, 22;
+		bonus bHit, 22; //@EVOL2
+		//                        Dislikes -> |Hit,Cr|Hit,Crit| <- Likes
+		// void call("enchanter_amulet_bonus", 18, 0, 22, 5); //@TMWA
 	">
 },
 {
