--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -72,6 +72,7 @@ npc: npc/items/silver_bell.txt
 npc: npc/items/shovel.txt
 npc: npc/items/maps.txt
 npc: npc/items/anchor_stone.txt
+npc: npc/items/enchanter_amulet.txt
 
 // Mob Functions
 npc: npc/mobs/miner_mania.txt
