Add .gitattributes entry for NPC script highlighting
Taken from evolved/serverdata repository.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.wlk	binary
+
+# treat script files as C (for highlighting in merge requests)
+world/map/npc/**/*.txt linguist-language=C gitlab-language=c
