mobs and drops 20260109
- added PinkQuartz to the DoomGolem (pink because of the refference HocusMask speaks of and old doom golems where rather red/pink)
- added WonderWoodlingBlossom and WonderWoodlingSeed to WonderWoodling and increased chance of WonderWood
- added BottleOfSand to Sunshrooms and drops that fit a hot/burning creature
- added Snowshroom drops that fit a cold creature
- added Moonshiner to the Moonshroom and removed Lifstone (mages should make them)
- added Raindrop to the Rainshroom and drops that fit a water creature
- increased SnowFlake weight to 1

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5691,7 +5691,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 500
 	Sell: 250
-	Weight: 0
+	Weight: 1
 	Refine: false
 	ViewSprite: 5361
 },
@@ -6022,6 +6022,61 @@ item_db: (
 	Weight: 10
 	Refine: false
 	ViewSprite: 5410
+},
+{
+	Id: 5411
+	AegisName: "WonderWoodlingBlossom"
+	Name: "WonderWoodlingBlossom"
+	Type: "IT_ETC"
+	Buy: 5000
+	Sell: 2500
+	Weight: 5
+	Refine: false
+	ViewSprite: 5411
+},
+{
+	Id: 5412
+	AegisName: "WonderWoodlingSeed"
+	Name: "WonderWoodlingSeed"
+	Type: "IT_ETC"
+	Buy: 10000
+	Sell: 5000
+	Weight: 5
+	Refine: false
+	ViewSprite: 5412
+},
+{
+	Id: 5413
+	AegisName: "Moonshiner"
+	Name: "Moonshiner"
+	Type: "IT_ETC"
+	Buy: 70
+	Sell: 35
+	Weight: 10
+	Refine: false
+	ViewSprite: 5413
+},
+{
+	Id: 5414
+	AegisName: "Raindrop"
+	Name: "Raindrop"
+	Type: "IT_ETC"
+	Buy: 500
+	Sell: 250
+	Weight: 1
+	Refine: false
+	ViewSprite: 5414
+},
+{
+	Id: 5415
+	AegisName: "PinkQuartz"
+	Name: "PinkQuartz"
+	Type: "IT_ETC"
+	Buy: 20000
+	Sell: 5000
+	Weight: 20
+	Refine: false
+	ViewSprite: 5415
 },
 /* Chest Armor */
 {
