--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -3150,13 +3150,13 @@ mob_db: (
 	MutationStrength: 60
 	Drops: {
 		SmallMushroom: 500
-		InsectLeg: 500
-		SulphurPowder: 400
-		Lifestone: 300
 		EmptyBottle: 100
+		Moonshiner: 100
 		Fungus: 30
 		MushroomSpores: 100
 		JoyplimScroll: 50
+		InsectLeg: 500
+		InsectSlime: 500
 		MoonshroomHat: (1, "ODG_BASICSTAT")
 	}
 },
@@ -3933,6 +3933,9 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 10
 	Drops: {
+		PinkQuartz: 400
+		PinkQuartz: 200
+		PinkQuartz: 100
 		BlackRose: 30
 		MagicRing: 2
 		BlinkingHocus: 1
@@ -8549,7 +8552,9 @@ mob_db: (
 		ReedBundle: 1000
 		Root: 1000
 		Root: 2000
-		WonderWood: 10
+		WonderWood: 125
+		WonderWoodlingBlossom: 500
+		WonderWoodlingSeed: 250
 	}
 },
 {
@@ -10657,13 +10662,13 @@ mob_db: (
 	MutationStrength: 50
 	Drops: {
 		SmallMushroom: 500
-		InsectLeg: 500
-		SulphurPowder: 400
-		Lifestone: 300
-		EmptyBottle: 100
 		Fungus: 30
 		MushroomSpores: 100
+		EmptyBottle: 100
+		BottleOfSand: 100
 		JoyplimScroll: 50
+		PileOfAsh: 1000
+		SulphurPowder: 500
 		SunshroomHat: (1, "ODG_BASICSTAT")
 	}
 },
@@ -10709,13 +10714,13 @@ mob_db: (
 	MutationStrength: 50
 	Drops: {
 		SmallMushroom: 500
-		InsectLeg: 500
-		SulphurPowder: 400
-		Lifestone: 300
-		EmptyBottle: 100
 		Fungus: 30
 		MushroomSpores: 100
+		EmptyBottle: 100
+		IcedWater: 100
 		JoyplimScroll: 50
+		Snowball: 4000
+		Snowflake: 1000
 		SnowshroomHat: (1, "ODG_BASICSTAT")
 	}
 },
@@ -10969,13 +10974,12 @@ mob_db: (
 	MutationStrength: 50
 	Drops: {
 		SmallMushroom: 500
-		InsectLeg: 500
-		SulphurPowder: 400
-		Lifestone: 300
-		EmptyBottle: 100
 		Fungus: 30
 		MushroomSpores: 100
+		EmptyBottle: 100
+		BottleOfWater: 100
 		JoyplimScroll: 50
+		Raindrop: 1000
 		RainshroomHat: (1, "ODG_BASICSTAT")
 	}
 },
