Added Corsair hat to Chronos

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -14596,7 +14596,7 @@ item_db: (
 },
 {
 	Id: 5287
-	AegisName: "HMCPirateHat"
+	AegisName: "CorsairHat"
 	Name: "Corsair Hat"
 	Type: "IT_ARMOR"
 	Buy: 1600
