--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -9081,7 +9081,7 @@ mob_db: (
 		CrazyRum: 750
 		CasinoCoins: 250
 		CasinoCoins: 250
-		HMCPirateHat: 3
+		CorsairHat: 3
 	}
 },
 {
@@ -9131,7 +9131,7 @@ mob_db: (
 		CrazyRum: 750
 		CasinoCoins: 250
 		CasinoCoins: 250
-		HMCPirateHat: 2
+		CorsairHat: 2
 	}
 },
 {
